[package]
name = "kreuzberg-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Kreuzberg document intelligence - Node.js native bindings"
keywords = ["nodejs", "napi", "document", "extraction", "bindings"]
categories = ["api-bindings", "text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
kreuzberg = { workspace = true, features = ["bundled-pdfium", "full"] }
kreuzberg-ffi = { workspace = true }

bytes = { workspace = true }
napi = { version = "3", default-features = false, features = ["napi8", "async", "serde-json"] }
napi-derive = "3"
tokio = { workspace = true, features = ["time"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
html-to-markdown-rs = { workspace = true }
lazy_static = { workspace = true }
num_cpus = { workspace = true }
ahash = { workspace = true }
ctor = { workspace = true }

[build-dependencies]
napi-build = "2.3"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc-rust = "0.2"
