[package]
name = "kreuzberg-node"
version = "5.0.0-rc.24"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance document intelligence library"
readme = false
keywords = ["document", "extraction", "ocr", "pdf", "text"]
categories = []

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return types
# it is genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming
# adapters configured but no actual async-trait callsite in this binding.
[package.metadata.cargo-machete]
ignored = ["serde_json", "async-trait", "tokio-util"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["api", "api-types", "auto-rotate-types", "captioning", "chunking", "chunking-tokenizers", "classification", "diff", "embedding-presets", "embeddings", "enrichment", "heic", "heuristics", "html", "keywords-rake", "keywords-yake", "layout-types", "liter-llm", "ner-llm", "ner-onnx", "ocr", "ocr-wasm", "office", "paddle-ocr-types", "pdf", "presets", "quality", "redaction", "reranker", "reranker-presets", "structured", "svg", "tokio-runtime", "transcription-types", "tree-sitter", "xml"]
api = ["kreuzberg/api"]
api-types = ["kreuzberg/api-types"]
auto-rotate-types = ["kreuzberg/auto-rotate-types"]
captioning = ["kreuzberg/captioning"]
chunking = ["kreuzberg/chunking"]
chunking-tokenizers = ["kreuzberg/chunking-tokenizers"]
classification = ["kreuzberg/classification"]
diff = ["kreuzberg/diff"]
embedding-presets = ["kreuzberg/embedding-presets"]
embeddings = ["kreuzberg/embeddings"]
enrichment = ["kreuzberg/enrichment"]
heic = ["kreuzberg/heic"]
heuristics = ["kreuzberg/heuristics"]
html = ["kreuzberg/html"]
keywords-rake = ["kreuzberg/keywords-rake"]
keywords-yake = ["kreuzberg/keywords-yake"]
layout-types = ["kreuzberg/layout-types"]
liter-llm = ["kreuzberg/liter-llm"]
ner-llm = ["kreuzberg/ner-llm"]
ner-onnx = ["kreuzberg/ner-onnx"]
ocr = ["kreuzberg/ocr"]
ocr-wasm = ["kreuzberg/ocr-wasm"]
office = ["kreuzberg/office"]
paddle-ocr-types = ["kreuzberg/paddle-ocr-types"]
pdf = ["kreuzberg/pdf"]
presets = ["kreuzberg/presets"]
quality = ["kreuzberg/quality"]
redaction = ["kreuzberg/redaction"]
reranker = ["kreuzberg/reranker"]
reranker-presets = ["kreuzberg/reranker-presets"]
structured = ["kreuzberg/structured"]
svg = ["kreuzberg/svg"]
tokio-runtime = ["kreuzberg/tokio-runtime"]
transcription-types = ["kreuzberg/transcription-types"]
tree-sitter = ["kreuzberg/tree-sitter"]
xml = ["kreuzberg/xml"]

[dependencies]
async-trait = "0.1"
kreuzberg = { version = "5.0.0-rc.24", path = "../kreuzberg", features = ["full", "pdf", "ocr", "paddle-ocr", "paddle-ocr-types", "layout-detection", "layout-types", "embeddings", "embedding-presets", "reranker", "reranker-presets", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "auto-rotate-types", "tokio-runtime", "api", "api-types", "mcp", "liter-llm", "quality", "svg", "transcription", "transcription-types", "classification", "captioning", "ner-onnx", "ner-llm", "diff", "redaction"] }
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio-util = { version = "0.7", features = ["rt"] }

[build-dependencies]
napi-build = "2"
