[package]
name = "kreuzberg-paddle-ocr"
version.workspace = true
edition = "2024"
rust-version.workspace = true
authors.workspace = true
description = "PaddleOCR via ONNX Runtime for Kreuzberg - high-performance text recognition"
license = "MIT"
repository.workspace = true
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/kreuzberg-paddle-ocr"
readme = "README.md"
keywords = ["paddle", "ocr", "onnx", "recognition", "detection"]
categories = ["computer-vision", "text-processing"]
exclude = ["tests/*", ".github/*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "kreuzberg_paddle_ocr"
crate-type = ["lib"]

[features]
default = []
load-dynamic = ["ort/load-dynamic"]

[dependencies]
geo-clipper = "0.9"
geo-types = "0.7"
image = { workspace = true }

# Crate-specific dependencies (not in workspace)
# Disable rayon - OCR parallelism is handled at higher level
imageproc = { version = "0.27", default-features = false }
ndarray = "0.17"
ort = { workspace = true, features = ["ndarray"] }
# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
