[package]
name = "kreuzberg-php"
version = "5.0.0-rc.23"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance document intelligence library"
readme = false
keywords = ["document", "extraction", "ocr", "pdf", "text"]
categories = []

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "async-trait"]

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []
default = ["api", "api-types", "auto-rotate-types", "captioning", "chunking", "chunking-tokenizers", "classification", "diff", "embedding-presets", "embeddings", "enrichment", "heic", "heuristics", "html", "keywords-rake", "keywords-yake", "layout-types", "liter-llm", "ner-llm", "ner-onnx", "ocr", "ocr-wasm", "office", "paddle-ocr-types", "pdf", "presets", "quality", "redaction", "reranker", "reranker-presets", "structured", "svg", "tokio-runtime", "transcription-types", "tree-sitter", "xml"]
api = ["kreuzberg/api"]
api-types = ["kreuzberg/api-types"]
auto-rotate-types = ["kreuzberg/auto-rotate-types"]
captioning = ["kreuzberg/captioning"]
chunking = ["kreuzberg/chunking"]
chunking-tokenizers = ["kreuzberg/chunking-tokenizers"]
classification = ["kreuzberg/classification"]
diff = ["kreuzberg/diff"]
embedding-presets = ["kreuzberg/embedding-presets"]
embeddings = ["kreuzberg/embeddings"]
enrichment = ["kreuzberg/enrichment"]
heic = ["kreuzberg/heic"]
heuristics = ["kreuzberg/heuristics"]
html = ["kreuzberg/html"]
keywords-rake = ["kreuzberg/keywords-rake"]
keywords-yake = ["kreuzberg/keywords-yake"]
layout-types = ["kreuzberg/layout-types"]
liter-llm = ["kreuzberg/liter-llm"]
ner-llm = ["kreuzberg/ner-llm"]
ner-onnx = ["kreuzberg/ner-onnx"]
ocr = ["kreuzberg/ocr"]
ocr-wasm = ["kreuzberg/ocr-wasm"]
office = ["kreuzberg/office"]
paddle-ocr-types = ["kreuzberg/paddle-ocr-types"]
pdf = ["kreuzberg/pdf"]
presets = ["kreuzberg/presets"]
quality = ["kreuzberg/quality"]
redaction = ["kreuzberg/redaction"]
reranker = ["kreuzberg/reranker"]
reranker-presets = ["kreuzberg/reranker-presets"]
structured = ["kreuzberg/structured"]
svg = ["kreuzberg/svg"]
tokio-runtime = ["kreuzberg/tokio-runtime"]
transcription-types = ["kreuzberg/transcription-types"]
tree-sitter = ["kreuzberg/tree-sitter"]
xml = ["kreuzberg/xml"]

[dependencies]
async-trait = "0.1"
ext-php-rs = "0.15.15"
kreuzberg = { version = "5.0.0-rc.23", path = "../kreuzberg", features = ["full", "pdf", "ocr", "paddle-ocr", "paddle-ocr-types", "layout-detection", "layout-types", "embeddings", "embedding-presets", "reranker", "reranker-presets", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "auto-rotate-types", "tokio-runtime", "api", "api-types", "mcp", "liter-llm", "quality", "svg", "transcription", "transcription-types", "classification", "captioning", "ner-onnx", "ner-llm", "diff", "redaction"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
