[package]
name = "kreuzberg-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Python bindings for Kreuzberg document intelligence library"
license.workspace = true
repository = "https://github.com/kreuzberg-dev/kreuzberg"
homepage = "https://kreuzberg-dev.github.io/kreuzberg/"
keywords = ["python", "pyo3", "document", "extraction", "bindings"]
categories = ["api-bindings", "text-processing"]

[lib]
name = "_internal_bindings"
crate-type = ["cdylib", "rlib"]
test = false

[dependencies]
kreuzberg = { workspace = true, features = ["bundled-pdfium", "full"] }
kreuzberg-ffi = { workspace = true }

async-trait = { workspace = true }
once_cell = "1.21"
# NOTE: pyo3 pinned to 0.27.x until pyo3-async-runtimes supports 0.28.x
pyo3 = { version = "=0.27.2", features = ["abi3-py310"] }
pyo3-async-runtimes = { version = "=0.27.0", features = ["tokio-runtime"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
html-to-markdown-rs = { workspace = true }
ahash = { workspace = true }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
