[package]
name = "kreuzberg-py"
version = "5.0.0-rc.1"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance document intelligence library"
readme = false
keywords = ["document", "extraction", "pdf", "ocr", "text"]
categories = ["text-processing"]

# `pyo3-async-runtimes` and `serde_json` are emitted unconditionally above so
# the manifest is stable across regens, but for umbrella crates with no
# async fns or no JSON-marshalled return types they are genuinely unused.
# List them here so `cargo machete` doesn't flag the no-async-no-json case
# as a real finding.
[package.metadata.cargo-machete]
ignored = ["pyo3-async-runtimes", "serde_json"]

[lib]
name = "_kreuzberg"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]

[dependencies]
async-trait = "0.1"
kreuzberg = { path = "../kreuzberg", features = [
    "full",
    "pdf",
    "ocr",
    "paddle-ocr",
    "paddle-ocr-types",
    "layout-detection",
    "layout-types",
    "embeddings",
    "embedding-presets",
    "chunking",
    "keywords-yake",
    "keywords-rake",
    "language-detection",
    "html",
    "tree-sitter",
    "office",
    "email",
    "archives",
    "stopwords",
    "auto-rotate",
    "auto-rotate-types",
    "tokio-runtime",
    "api",
    "mcp",
    "liter-llm",
    "quality",
] }
pyo3 = { version = "0.28" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
