[package]
name = "kreuzberg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "High-performance document intelligence library for Rust. Extract text, metadata, and structured data from PDFs, Office documents, images, and 96 formats and 306 programming languages via tree-sitter code intelligence with async/sync APIs."
license.workspace = true
repository = "https://github.com/kreuzberg-dev/kreuzberg"
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/kreuzberg"
keywords = ["document", "extraction", "pdf", "ocr", "parser"]
categories = ["parser-implementations", "text-processing"]
readme = "README.md"

[package.metadata.cargo-machete]
ignored = [
    "liter-llm",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "nom-exif",
    # icu_provider is feature-gated and consumed transitively by language-detection;
    # cargo-machete cannot resolve `dep:icu_provider` references in feature flag chains.
    "icu_provider",
    "serde_toon_format",
    # kreuzberg-gliner-rs exposes the `gliner` lib name; kreuzberg-orp exposes `orp`.
    # cargo-machete checks for the package name but the source imports the lib name.
    "kreuzberg-gliner-rs",
    "kreuzberg-orp",
    # symphonia is optional behind the `transcription` feature; cargo-machete cannot
    # resolve optional dep usage through feature-gated cfg blocks.
    "symphonia",
    # mel_spec is optional behind the `transcription` feature; same constraint.
    "mel_spec",
]

[lib]
crate-type = ["rlib"]

[features]
default = ["tokio-runtime", "simd-utf8"]

# Build-time only: enables pprof flamegraph profiling. No #[cfg] gates —
# activates the pprof dependency (non-Windows, non-WASM only).
profiling = ["dep:pprof"]

pool-metrics = []

simd-utf8 = ["dep:simdutf8"]

tokio-runtime = ["dep:tokio"]

# PDF extraction is currently backed by pdf_oxide. Keep this as the canonical
# `pdf` feature until/unless a second PDF backend is introduced.
pdf = [
    "dep:pdf_oxide",
    "dep:lopdf",
    "dep:image",
    "dep:flate2",
    "html",
    "image-encode",
]
excel = ["dep:calamine", "tokio-runtime"]
excel-wasm = ["dep:calamine"]
office = [
    "dep:cfb",
    "dep:roxmltree",
    "dep:zip",
    "dep:quick-xml",
    "dep:biblatex",
    "dep:biblib",
    "dep:org",
    "dep:dbase",
    "html",
]
hwp = ["dep:cfb", "dep:flate2"]
hwpx = ["dep:unhwp", "dep:zip"]
iwork = ["dep:zip", "dep:snap"]
email = [
    "dep:mail-parser",
    "dep:cfb",
    "dep:outlook-pst",
    "dep:tempfile",
    "dep:chrono",
    "dep:chardetng",
]
html = ["dep:html-to-markdown-rs", "dep:v_htmlescape"]
xml = ["dep:quick-xml", "dep:roxmltree"]
archives = ["dep:zip", "dep:tar", "dep:sevenz-rust2", "dep:flate2"]
mdx = []

liter-llm = ["dep:liter-llm", "dep:minijinja", "ocr-pipeline"]

# Gate for the centralised image re-encode pass (image_encode module).
# Enabled by every feature that activates `dep:image` so the module is always
# available when image processing is possible.  This is the only feature that
# the module declaration in `core/mod.rs` checks.
image-encode = ["dep:image"]

# Lightweight marker feature: shared OCR pipeline infrastructure (quality scoring,
# page rendering, multi-backend pipeline) usable without the Tesseract binary.
# Implied by `liter-llm` so VLM-only OCR works without enabling the full `ocr` feature.
# Also implied by `ocr` and `ocr-wasm` (see those feature definitions).
ocr-pipeline = ["dep:image", "image-encode"]

tree-sitter = ["dep:tree-sitter-language-pack"]
tree-sitter-wasm = ["tree-sitter"]

ocr = [
    "ocr-pipeline",
    "dep:kreuzberg-tesseract",
    "dep:image",
    "dep:tiff",
    "dep:fast_image_resize",
    "dep:nom-exif",
    "dep:hayro-jpeg2000",
    "dep:hayro-jbig2",
    "html",
]
# WASM OCR: Minimal Tesseract backend without html-to-markdown (which has WASI imports)
# Includes only the core OCR processing dependencies needed for Tesseract on WASM
ocr-wasm = [
    "ocr-pipeline",
    "dep:kreuzberg-tesseract",
    "dep:image",
    "dep:nom-exif",
    "dep:hayro-jpeg2000",
    "dep:hayro-jbig2",
]
# HEIF / HEIC / AVIF / HEICS / AVCS decoding via vendored libheif bindings.
# Native-only — libheif is a C library with no working WASM/Android story.
# Pulls in `nom-exif` so HEIC EXIF blocks are readable even without the full `ocr` feature.
heic = ["dep:kreuzberg-libheif", "dep:image", "dep:nom-exif", "image-encode"]
# PaddleOCR type definitions only — pure-Rust config structs, no ORT dependency.
# Exposes PaddleOcrConfig, PaddleLanguage, ModelPaths. Safe on Android/WASM.
paddle-ocr-types = []
# Candle-based VLM OCR backends. Pure-Rust transformer inference via candle —
# no ORT, no native binaries. Compatible with `ort-bundled` / `paddle-ocr`;
# multiple OCR backends can be registered side-by-side.
#
# Per-model sub-features live in kreuzberg-candle-ocr; enable them via
# `--features candle-ocr,kreuzberg-candle-ocr/trocr` or by depending on
# kreuzberg-candle-ocr directly with the sub-feature.
candle-ocr = [
    "dep:kreuzberg-candle-ocr",
    "dep:image",
    "dep:hf-hub",
    "dep:sha2",
    "ocr-pipeline",
    "tokio-runtime",
]
# TrOCR backend: aggregate feature enabling candle-ocr with trocr sub-feature
candle-trocr = ["candle-ocr", "kreuzberg-candle-ocr/trocr"]
# PaddleOCR-VL backend: aggregate feature enabling candle-ocr with paddleocr-vl sub-feature
candle-paddleocr-vl = ["candle-ocr", "kreuzberg-candle-ocr/paddleocr-vl"]
# PaddleOCR via ONNX Runtime
# Requires 'ocr' feature for shared conversion utilities and table reconstruction
paddle-ocr = [
    "paddle-ocr-types",
    "dep:kreuzberg-paddle-ocr",
    "dep:sha2",
    "dep:image",
    "dep:hf-hub",
    "dep:ureq",
    "dep:ort",
    "image-encode",
    "dep:ndarray",
    "html",
    "tokio-runtime",
    "ocr",
    "auto-rotate",
]
# Bundle ORT binaries via the official Microsoft release (includes CoreML on macOS, CUDA on Linux).
# When active, no system ORT library is required and ort_discovery is skipped.
ort-bundled = ["ort/download-binaries", "ort/tls-native"]
# Build-time only: configures ORT to load ONNX Runtime dynamically at runtime.
# No #[cfg] gates — passed through to the `ort` crate.
ort-dynamic = ["ort/load-dynamic"]
# Layout detection via ONNX Runtime (YOLO + RT-DETR)
# Document orientation detection using PP-LCNet for auto_rotate
auto-rotate = [
    "auto-rotate-types",
    "dep:ort",
    "dep:ndarray",
    "dep:hf-hub",
    "dep:sha2",
    "dep:image",
    "dep:ureq",
    "ort-bundled",
]
layout-detection = [
    "layout-types",
    "dep:ort",
    "dep:ndarray",
    "dep:hf-hub",
    "dep:sha2",
    "dep:image",
    "tokio-runtime",
    "ort-bundled",
]
language-detection = ["dep:whatlang"]
# layout-types: pure-Rust layout struct definitions — no ORT dependency.
# Included by layout-detection; also usable standalone on WASM/Android targets.
layout-types = []
# auto-rotate-types: pure-Rust OrientationResult struct — no ORT dependency.
# Included by auto-rotate; also usable standalone on WASM/Android targets.
auto-rotate-types = []

# Transcription (audio/video speech-to-text via Whisper ONNX + ORT).
# Matches the exact pattern of embeddings / layout-detection / paddle-ocr:
# - transcription-types: pure config structs only (WASM/Android safe, no ORT)
# - transcription: full inference (ORT + hf-hub + symphonia decode). Zero impact when off.
# Excluded from no-ort-target, wasm-target, android-target (x86_64 emulator) exactly like other ORT ML.
transcription-types = []
transcription = [
    "transcription-types",
    "dep:mel_spec",
    "dep:ndarray",
    "dep:ort",
    "dep:hf-hub",
    "dep:sha2",
    "dep:symphonia",
    "dep:lofty",
    "dep:tokenizers",
    "ort-bundled",
    "tokio-runtime",
]

chunking = [
    "dep:auto_enums",
    "dep:either",
    "dep:icu_provider",
    "dep:icu_segmenter",
    "dep:itertools",
    "dep:strum",
]
chunking-tokenizers = ["chunking", "dep:tokenizers"]
# embedding-presets: static preset metadata (WASM-safe, no ORT)
embedding-presets = []
# embeddings: full embedding generation with ONNX Runtime (ORT-dependent, WASM-incompatible)
# NOTE: embedding-presets is a subset of embeddings (no ORT); always implied by embeddings.
embeddings = [
    "dep:hf-hub",
    "dep:ort",
    "dep:ndarray",
    "dep:tokenizers",
    "chunking",
    "tokio-runtime",
    "ort-bundled",
    "embedding-presets",
]
# v5.0.0: cross-encoder reranking.
# reranker-presets: static preset metadata (WASM/Android-safe, no ORT).
reranker-presets = []
# reranker: full cross-encoder inference via ONNX Runtime (ORT-dependent,
# WASM-incompatible). NOTE: reranker-presets is a subset of reranker; always implied.
reranker = [
    "reranker-presets",
    "dep:hf-hub",
    "dep:ort",
    "dep:ndarray",
    "dep:tokenizers",
    "tokio-runtime",
    "ort-bundled",
]
stopwords = []
quality = ["dep:unicode-normalization", "dep:chardetng", "stopwords"]

keywords-yake = ["stopwords"]
keywords-rake = ["dep:rake", "stopwords"]
keywords = ["keywords-yake", "keywords-rake"]

diff = ["dep:similar"]

# OSS v5 follow-up: text analysis, redaction, classification, captioning, QR detection.
# Each feature lands in its own module under `crates/kreuzberg/src/text/` (or
# `crates/kreuzberg/src/extractors/` for QR) and is wired through a built-in
# post-processor under `crates/kreuzberg/src/plugins/processor/builtin/`.
ner = [] # NER result types only; safe on every target.
ner-llm-types = [
    "ner",
] # LlmBackend stub for targets without full ner-llm (Windows, Android x86_64, WASM).
ner-llm = ["ner", "liter-llm"] # LLM-driven zero-shot NER (no ORT).
ner-onnx = [
    # gline-rs ONNX backend (kreuzberg-gliner-rs fork) with HuggingFace model download.
    "ner",
    "dep:kreuzberg-gliner-rs",
    "dep:kreuzberg-orp",
    "dep:ort",
    "dep:ndarray",
    "dep:hf-hub",
    "dep:tokenizers",
    "dep:sha2",
    "tokio-runtime",
]

redaction = ["dep:sha2"] # Pattern-based PII engine; pure-Rust.
redaction-ml = ["redaction", "ner"] # Couple in NER for PERSON/ORG/LOC redaction.

summarization = ["stopwords"] # TextRank extractive only; pure-Rust (uses stopword tables).
summarization-llm = ["summarization", "liter-llm"]

translation = ["liter-llm"]
classification = ["liter-llm"]
captioning = ["liter-llm"]
qr-codes = ["dep:rqrr", "dep:image"] # Pure-Rust QR decoding via rqrr.

# SVG support: parse, sanitize (strip external hrefs/JS/foreignObject), re-serialize,
# and rasterize SVG → PNG/JPEG/WebP via resvg + tiny-skia. Pure-Rust, WASM-safe.
# Text is rendered as paths (no font lookup) because `text` / `system-fonts` features
# are intentionally excluded to avoid native font-scanning deps.
svg = ["dep:resvg", "image-encode"]

tower-service = ["dep:tower", "tokio-runtime"]

api-types = []
api = [
    "api-types",
    "tower-service",
    "dep:axum",
    "dep:chrono",
    "dep:moka",
    "dep:tower-http",
    "dep:utoipa",
    "dep:uuid",
    "tokio-runtime",
    "chunking",
]
mcp = ["tower-service", "dep:rmcp", "tokio-runtime"]
mcp-http = ["mcp", "api"]

otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

# no-ort-target: shared base for targets that cannot use ONNX Runtime (Android x86_64 emulator,
# WASM). Pure-Rust only — no ORT, no native-only C++ deps. Used as a foundation for both
# wasm-target and android-target to avoid duplication.
#
# Excluded:
# - liter-llm: tokenizers → hf-hub → ureq 2.12.1 → rustls 0.23 + socks 0.3 (both wasm-incompatible).
#   Added to android-target explicitly; WASM does not use LLM for now.
# - hwpx: unhwp → zip → xz2 → lzma-sys (native C, missing wasm stdlib). Native-only;
#   re-enabled in android-target.
no-ort-target = [
    "pdf",
    "html",
    "xml",
    "email",
    "language-detection",
    "chunking",
    "chunking-tokenizers",
    "quality",
    "keywords",
    "office",
    "iwork",
    "hwp",
    "mdx",
    "archives",
    "stopwords",
    "embedding-presets",
    "reranker-presets",
    "layout-types",
    "auto-rotate-types",
    "paddle-ocr-types",
    "ner",
    "redaction",
    "summarization",
    "qr-codes",
    "svg",
    "transcription-types",
]
# wasm-target: no-ort-target plus WASM-specific overrides (excel-wasm, tree-sitter-wasm, ocr-wasm).
wasm-target = ["no-ort-target", "excel-wasm", "tree-sitter-wasm", "ocr-wasm"]
# android-target: no-ort-target plus native-Linux variants that work on Android ABI
# (excel with tokio, native tree-sitter, Tesseract OCR, and API/MCP transport).
# Excludes ORT-dependent features (paddle-ocr, layout-detection, embeddings, reranker,
# auto-rotate, transcription).
android-target = [
    "no-ort-target",
    "excel",
    "tree-sitter",
    "ocr",
    "api",
    "mcp",
    "liter-llm",
    "hwpx",
    "diff",
]
# windows-target: curated feature set for Windows host builds across every
# binding crate. Native libheif/libheif-sys is not installed on the standard
# GitHub `windows-latest` runner image (no libheif.pc on the pkg-config path,
# no vcpkg integration wired into our publish workflow), so this aggregate
# drops `heic` along with the ORT-dependent features that Windows already
# excluded in the FFI Cargo.toml. Mirrors the explicit Windows list that the
# kreuzberg-ffi crate uses; binding crates reach it via per-crate
# `[[crates.<x>.target_dep_overrides]]` blocks in `alef.toml`.
windows-target = [
    "pdf",
    "ocr",
    "chunking",
    "keywords-yake",
    "keywords-rake",
    "language-detection",
    "html",
    "tree-sitter",
    "office",
    "email",
    "archives",
    "stopwords",
    "auto-rotate-types",
    "layout-types",
    "paddle-ocr-types",
    "embedding-presets",
    "reranker-presets",
    "ner",
    "ner-llm-types",
    "redaction",
    "diff",
    "qr-codes",
    "summarization",
    "transcription-types",
    "tokio-runtime",
    "api",
    "mcp",
    "liter-llm",
    "quality",
]
# Mobile deployment preset — formats + analysis + Tesseract OCR + code intelligence + API types.
# Excludes ORT-dependent features (paddle-ocr, layout-detection, embeddings, reranker,
# auto-rotate, transcription)
# and server transport infrastructure (mcp, otel, liter-llm).
mobile = ["formats", "analysis", "ocr", "tree-sitter", "api-types", "tokio-runtime"]
# WASM only: enables wasm-bindgen-rayon for multi-threaded WASM builds.
# No #[cfg] gates — activates the wasm-bindgen-rayon dependency.
wasm-threads = ["dep:wasm-bindgen-rayon"]
# --- Aggregate features ---

# Document format extractors only — no infrastructure or text analysis.
formats = [
    "pdf",
    "excel",
    "office",
    "hwp",
    "hwpx",
    "iwork",
    "email",
    "html",
    "xml",
    "archives",
    "mdx",
    "svg",
    "heic",
]
# Text processing and analysis capabilities.
analysis = ["language-detection", "chunking", "quality", "keywords", "diff"]
# Network services and observability infrastructure.
services = ["api", "mcp", "otel"]
# Everything — all formats, analysis, services, OCR, ML, and code intelligence.
full = [
    "formats",
    "analysis",
    "services",
    "ocr",
    "paddle-ocr",
    "layout-detection",
    "embeddings",
    "reranker",
    "transcription",
    "chunking-tokenizers",
    "tree-sitter",
    "liter-llm",
    "tokio-runtime",
    "diff",
    "ner-llm",
    "ner-onnx",
    "redaction",
    "redaction-ml",
    "summarization",
    "summarization-llm",
    "translation",
    "classification",
    "captioning",
    "qr-codes",
    "heic",
]
# Server deployment preset — formats + analysis + services + OCR.
server = ["formats", "analysis", "services", "ocr", "paddle-ocr", "layout-detection"]
# CLI-only features (thin gate for kreuzberg-cli).
cli = ["services", "chunking"]

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
auto_enums = { version = "0.8", optional = true }
axum = { version = "0.8", features = ["macros", "json", "multipart"], optional = true }
base64 = { workspace = true }
biblatex = { version = "0.12", optional = true }
biblib = { version = "0.4", default-features = false, features = [
    "ris",
    "pubmed",
    "xml",
    "regex",
], optional = true }
bitvec = "1.0"
blake3 = { workspace = true }
bytes = { workspace = true }
calamine = { version = "0.35.0", features = ["dates"], optional = true }
cfb = { workspace = true, optional = true }
chardetng = { version = "1.0.0", optional = true }
chrono = { workspace = true, optional = true }
comrak = { workspace = true }
dbase = { workspace = true, optional = true }
dirs = "6"
either = { version = "1", optional = true }
encoding_rs = { version = "0.8.35" }
fast_image_resize = { version = "6.0.0", optional = true }
flate2 = { version = "1.1", optional = true }
hayro-jbig2 = { version = "0.3", default-features = false, features = ["std"], optional = true }
hayro-jpeg2000 = { version = "0.3", default-features = false, features = [
    "std",
    "simd",
], optional = true }
hex = { workspace = true }
html-to-markdown-rs = { workspace = true, features = [
    "inline-images",
    "metadata",
], optional = true }
icu_provider = { version = "2", features = ["sync"], optional = true }
icu_segmenter = { version = "2", optional = true }
image = { workspace = true, default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "tiff",
    "gif",
    "pnm",
    "rayon",
], optional = true }
indexmap = "2.14.0"
infer = "0.19.0"
itertools = { workspace = true, optional = true }
jotdown = "0.10"
kreuzberg-gliner-rs = { version = "0.2.0", optional = true }
kreuzberg-libheif = { path = "../kreuzberg-libheif", version = "5.0.0-rc.19", optional = true }
kreuzberg-orp = { version = "0.1.1", optional = true }
kreuzberg-tesseract = { path = "../kreuzberg-tesseract", optional = true }
libc = { workspace = true }
# lofty: pure-Rust audio tag reader (ID3v1/v2, MP4 atoms, Vorbis comments, FLAC, etc.)
# MIT license. Used for metadata extraction independent of the inference backend.
lofty = { version = "0.24", optional = true }
# liter-llm is declared in the platform-conditional dependencies block below — it must be
# excluded on Windows because it pulls reqwest/rustls -> aws-lc-rs -> aws-lc-sys, which fails
# to build on Windows MSVC.
log = { workspace = true }
lopdf = { version = "0.41.0", optional = true }
mail-parser = { version = "0.11.3", optional = true }
mel_spec = { version = "0.4", optional = true }
memchr = "2.8.2"
memmap2 = { workspace = true }
mime_guess = "2.0"
minijinja = { workspace = true, optional = true }
moka = { version = "0.12", features = ["sync"], optional = true }
ndarray = { version = "0.17", optional = true }
nom-exif = { workspace = true, optional = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { version = "0.32", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"], optional = true }
org = { version = "0.3", optional = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "api-18",
], optional = true }
outlook-pst = { version = "1.2.0", optional = true }
parking_lot = { workspace = true }
pastey = "0.2"
pdf_oxide = { workspace = true, features = ["rendering"], optional = true }
pulldown-cmark = { version = "0.13" }
quick-xml = { version = "0.40.1", features = ["serialize"], optional = true }
rake = { version = "0.3.6", optional = true }
rayon = { workspace = true }
regex = "1.12.4"
resvg = { workspace = true, optional = true }
rmcp = { version = "1.7.0", features = [
    "server",
    "macros",
    "base64",
    "transport-io",
    "transport-streamable-http-server",
    "server-side-http",
], optional = true }
rmp-serde = "1.3"

roxmltree = { version = "0.21.1", optional = true }
rqrr = { version = "0.10", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_toon_format = { workspace = true }
serde_yaml_ng = "0.10.0"
sevenz-rust2 = { version = "0.20.2", optional = true }
sha2 = { version = "0.11", optional = true }
simdutf8 = { version = "0.1", optional = true }
similar = { workspace = true, optional = true }
snap = { version = "1.1", optional = true }
strum = { version = "0.28", features = ["derive"], optional = true }
# Symphonia: pure-Rust audio decoder for mp3, wav, m4a/mp4, webm etc.
# MPL-2.0 (file-scoped copyleft, safe for our use). Exception granted in deny.toml.
symphonia = { version = "0.6", optional = true, default-features = false, features = [
    "aac",
    "adpcm",
    "isomp4",
    "mkv",
    "mp3",
    "pcm",
    "wav",
] }
tar = { version = "^0.4", optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tiff = { version = "0.11", optional = true }
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["fancy-regex"] }
tokio = { workspace = true, optional = true }
toml = { workspace = true }
tower = { version = "0.5", features = ["timeout", "limit", "util"], optional = true }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "limit",
    "catch-panic",
    "request-id",
    "sensitive-headers",
    "compression-full",
], optional = true }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.33", optional = true }
unhwp = { version = "0.5.1", default-features = false, features = ["hwpx"], optional = true }
unicode-normalization = { version = "0.1.25", optional = true }
urlencoding = "2"
utoipa = { version = "5.5", features = ["axum_extras"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
v_htmlescape = { version = "0.17", optional = true }
whatlang = { version = "0.18.0", optional = true }
zip = { version = ">=7.0.0", optional = true, default-features = false, features = [
    "deflate-flate2",
] }

[target.'cfg(all(not(target_os = "windows"), not(target_arch = "wasm32")))'.dependencies]
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
# Candle-based VLM OCR backends - pure-Rust transformer inference, not on WASM yet.
kreuzberg-candle-ocr = { path = "../kreuzberg-candle-ocr", version = "5.0.0-rc.3", optional = true }
# PaddleOCR via ONNX Runtime - not available on WASM (vendored from paddle-ocr-rs)
kreuzberg-paddle-ocr = { path = "../kreuzberg-paddle-ocr", version = "5.0.0-rc.19", optional = true }
liter-llm = { workspace = true, optional = true, features = ["native-http"] }
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
# Enable tokenizers `http` feature on native targets so model downloads work via hf-hub.
# Wasm builds get tokenizers without `http` to avoid hf-hub → ureq 2.12.1 → rustls 0.23 (wasm-incompat).
tokenizers = { version = "0.23", default-features = false, features = ["http", "fancy-regex"], optional = true }
# Force ureq (transitive dep via hf-hub) to use rustls on non-Windows
ureq = { version = "3.3", default-features = false, features = ["rustls", "json"], optional = true }

# Use native-tls on Windows to avoid aws-lc-sys CMake build issues with MinGW
[target.'cfg(all(target_os = "windows", not(target_arch = "wasm32")))'.dependencies]
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
# Candle-based VLM OCR backends - pure-Rust transformer inference, not on WASM yet.
kreuzberg-candle-ocr = { path = "../kreuzberg-candle-ocr", version = "5.0.0-rc.3", optional = true }
# PaddleOCR via ONNX Runtime - not available on WASM (vendored from paddle-ocr-rs)
kreuzberg-paddle-ocr = { path = "../kreuzberg-paddle-ocr", version = "5.0.0-rc.19", optional = true }
# liter-llm: aws-lc-sys MSVC fix shipped in kreuzberg-dev/liter-llm; track via git patch.
liter-llm = { workspace = true, optional = true, features = ["native-http"] }
# Enable tokenizers `http` feature on Windows so model downloads work via hf-hub.
tokenizers = { version = "0.23", default-features = false, features = ["http", "fancy-regex"], optional = true }
# Force ureq (transitive dep via hf-hub) to use native-tls on Windows
ureq = { version = "3.3", default-features = false, features = [
    "native-tls",
    "json",
], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tree-sitter-language-pack]
workspace = true
features = ["dynamic-loading", "download", "serde"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
# Force-enable the wasm_js backend for every getrandom major in the graph.
# 0.2 is pulled in by ring (via build-deps), 0.3 by ahash/tokenizers/tree-sitter-language-pack,
# 0.4 is the latest. Without these features the wasm_js OS-RNG backend can't be selected.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
# On wasm32, swap kreuzberg-tesseract from its native default ("static-linking" -> "build-tesseract")
# to the WASI-SDK build path ("build-tesseract-wasm") and bundle eng.traineddata so OCR works
# in-memory with no filesystem.
kreuzberg-tesseract = { path = "../kreuzberg-tesseract", default-features = false, features = [
    "build-tesseract-wasm",
    "bundle-tessdata-eng",
], optional = true }
liter-llm = { workspace = true, optional = true, features = ["wasm-http"] }
tree-sitter-language-pack = { workspace = true, default-features = false, features = [
    "serde",
], optional = true }
wasm-bindgen-rayon = { version = "1.3", optional = true }

[build-dependencies]

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
dotenvy = "0.15"
filetime = "0.2"
image = { workspace = true, default-features = false, features = ["png"] }
jsonschema = "0.46"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
serial_test = "3.5.0"
tar = "^0.4"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = ">=7.0.0, <8.7.0", default-features = false, features = ["deflate-flate2"] }

[[bench]]
name = "text_quality"
harness = false
required-features = ["quality"]

[lints]
workspace = true
