[package]
name = "xberg-candle-ocr"
version.workspace = true
edition = "2024"
rust-version.workspace = true
authors.workspace = true
description = "Candle-based VLM OCR engines for Xberg - pure-Rust transformer OCR (TrOCR, PaddleOCR-VL, GLM-OCR)"
license = "MIT"
repository.workspace = true
homepage = "https://xberg.io"
documentation = "https://docs.rs/xberg-candle-ocr"
readme = "README.md"
keywords = ["candle", "ocr", "transformer", "vlm", "recognition"]
categories = ["computer-vision", "text-processing"]
exclude = ["tests/*", ".github/*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "xberg_candle_ocr"
crate-type = ["lib"]

[features]
default = []

# Per-model sub-features. None enabled by default.
trocr = []
paddleocr-vl = []
glm-ocr = []
deepseek-ocr = []

# Device acceleration pass-throughs to candle.
# CUDA: Linux/Unix only (requires nvcc compiler); not available on macOS, Windows, or WASM.
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# Metal: macOS only (Apple GPU support via Metal Framework).
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
# MKL: Intel Math Kernel Library (all platforms, but typically Linux/Windows).
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
# Accelerate: macOS only (Apple's Accelerate Framework for SIMD/BLAS).
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]

[dependencies]
base64 = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
fs2 = { workspace = true }
image = { workspace = true, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif"] }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
thiserror = { workspace = true }
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
tracing = { workspace = true }

# hf-hub 1.0 uses its own reqwest/rustls stack, so a single non-wasm declaration covers every
# native target (the `blocking` feature provides the sync API over an internal tokio runtime).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hf-hub = { version = "1.0", default-features = false, features = ["blocking"] }

[lints]
workspace = true
